Separated config into uneditable and editable values

--- a/debug.html
+++ b/debug.html
@@ -4,7 +4,7 @@
   <title>MBDCcomUnit</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box;}
-      body { font-style: : Helvetica, Arial; font-size: 0;}
+      body { font-style: Helvetica, Arial; font-size: 0;}
       table { width: 100vw; text-align: center; border: none; border-collapse: collapse;}
       tr { height: 29px; }
       td { text-align: center; font-size: 25px; max-width: 25vw;}
@@ -45,6 +45,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
   <script src="/config.js"></script>
+  <script src="/config.static.js"></script>
   <script>
     var socket = io();
     const numColumns = 5;
@@ -123,7 +124,7 @@
       socket.emit('manual', {index : index, value: $('#manual'+index).val()})
     }
 
-    if (!config.exposeUpload){
+    if (!constants.exposeUpload){
       $('#uploadButton').remove();
     }
     if (config.testMode){
@@ -134,7 +135,7 @@
       $(address(i, 0)).addClass('header');
     }
 
-    $(address(0, 0)).html(config.name); 
+    $(address(0, 0)).html(constants.name); 
     socket.on('ip', function(msg){
       $(address(1, 0)).html(msg);
     });
@@ -142,7 +143,7 @@
       $(address(2, 0)).html(printTime(msg));
       $(address(3, 0)).html(printDate(msg));
     });
-    $(address(4, 0)).html(config.QS);
+    $(address(4, 0)).html(constants.QS);
 
 
     let cursor = 0;
